--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="HandheldFriendly" content="True">
-    <title>Free Proxies</title>
+    <title>Neolux's Proxies</title>
     <meta property="og:description" content="免费的ss、ssr、vmess、trojan节点">
     <meta name="keywords" content="免费的ss、ssr、vmess、torjan节点">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
@@ -22,7 +22,7 @@
     <nav class="navbar is-primary pl-2 pr-2" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a href="https://{{ .domain }}" class="navbar-item">
-                <h1 class="title is-4">Free Proxies</h1>
+                <h1 class="title is-4">Neolux's Proxies</h1>
             </a>
             <a role="button" class="navbar-burger burger is-white" aria-label="menu" aria-expanded="false" data-target="clients">
                 <span aria-hidden="true"></span>
@@ -145,16 +145,16 @@
     </div>
     <footer class="footer has-text-centered">
         <!-- 所有使用本代码提供服务的禁止删除、修改版权信息 -->
-        <p>欢迎关注tg频道：<a href="https://t.me/peekfun">@peekfun</a></p>
+        <!--<p>欢迎关注tg频道：<a href="https://t.me/peekfun">@peekfun</a></p>
         <p>抓取程序已开源：<a href="https://github.com/zu1k/proxypool">zu1k/proxypool</a></p>
         <p>本程序为fork版：<a href="https://github.com/sansui233/proxypool">sansui233/proxypool</a></p>
         <p>修改版：<a href="https://github.com/ssrlive/proxypool">ssrlive/proxypool</a><br>{{ .version }}</p>
         <br>
-        <p><b>Theme</b>&nbspby&nbsp<a href="https://github.com/sansui233/" class="has-text-primary"><b>Sansui233</b></a> Powered&nbspby&nbsp<b>Bulma</b></p>
+        <p><b>Theme</b>&nbspby&nbsp<a href="https://github.com/sansui233/" class="has-text-primary"><b>Sansui233</b></a> Powered&nbspby&nbsp<b>Bulma</b></p>-->
     </footer>
     <script src="static/index.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VK0B43EQ3"></script>
+    <!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-9VK0B43EQ3"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -162,7 +162,7 @@
     gtag('js', new Date());
 
     gtag('config', 'G-9VK0B43EQ3');
-    </script>
+    </script>-->
 </body>
 
 </html>
