--- a/assets/html/shadowrocket.html
+++ b/assets/html/shadowrocket.html
@@ -72,15 +72,15 @@
     </div>
     <footer class="footer has-text-centered">
         <!-- 所有使用本代码提供服务的禁止删除、修改版权信息 -->
-        <p>欢迎关注tg频道：<a href="https://t.me/peekfun">@peekfun</a></p>
+        <!--<p>欢迎关注tg频道：<a href="https://t.me/peekfun">@peekfun</a></p>
         <p>抓取程序已开源：<a href="https://github.com/zu1k/proxypool">zu1k/proxypool</a></p>
         <p>本程序为fork版：<a href="https://github.com/sansui233/proxypool">sansui233/proxypool</a><br>{{ .version }}</p>
         <br>
-        <p><b>Theme</b>&nbspby&nbsp<a href="https://github.com/sansui233/" class="has-text-primary"><b>Sansui233</b></a> Powered&nbspby&nbsp<b>Bulma</b></p>
+        <p><b>Theme</b>&nbspby&nbsp<a href="https://github.com/sansui233/" class="has-text-primary"><b>Sansui233</b></a> Powered&nbspby&nbsp<b>Bulma</b></p>-->
     </footer>
     <script src="static/index.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VK0B43EQ3"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VK0B43EQ3"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -88,7 +88,7 @@
     gtag('js', new Date());
 
     gtag('config', 'G-9VK0B43EQ3');
-    </script>
+    </script> -->
 </body>
 
 </html>
