--- a/assets/html/clash.html
+++ b/assets/html/clash.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="HandheldFriendly" content="True">
-    <title>Free Proxies</title>
+    <title>Neolux's Proxies</title>
     <meta property="og:description" content="免费的ss、ssr、vmess、trojan节点">
     <meta name="keywords" content="免费的ss、ssr、vmess、torjan节点">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
@@ -22,7 +22,7 @@
     <nav class="navbar is-primary pl-2 pr-2" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a href="https://{{ .domain }}" class="navbar-item">
-                <h1 class="title is-4">Free Proxies</h1>
+                <h1 class="title is-4">Neolux's Proxies</h1>
             </a>
             <a role="button" class="navbar-burger burger is-white" aria-label="menu" aria-expanded="false" data-target="clients">
                 <span aria-hidden="true"></span>
