--- a/assets/html/clash.html
+++ b/assets/html/clash.html
@@ -56,7 +56,7 @@
                         </tr>
                         <tr>
                             <th>本地部署时配置文件</th>
-                            <td>http://127.0.0.1:{{ .port }}/clash/config</td>
+                            <td>http://127.0.0.1:{{ .port }}/clash/localconfig</td>
                             <td class="has-text-right"><a href="clash://install-config?url=http://127.0.0.1:{{ .port }}/clash/localconfig" class="button is-small is-link">一键导入</a></td>
                         </tr>
                     </tbody>
